# aws-orbit-workbench

./: .gitignore  .gitmodules  404.markdown  404.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Gemfile  README.md  _config.yml  about.markdown  blog.markdown  cli-buildspec.yaml  demo_pipeline.yaml  deployment-role.yaml  documentation.markdown  examples.markdown  index.markdown  index.md  installation.markdown  release-requirements.txt  requirements.txt  setup-vscode.sh  setup.sh  tour.markdown  tutorial.markdown  tutorials.markdown  validate.sh
.github/: CODEOWNERS  (+1 more)
sdk/: MANIFEST.in  README.md  VERSION  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run_container_test.sh  setup.cfg  setup.py  update_repo.sh  validate.sh
sdk/aws/utils/notebooks/: Magics.py  common.py
sdk/aws/utils/notebooks/controller/: __init__.py  controller.py
sdk/aws/utils/notebooks/database/: __init__.py  database.py  test.py
sdk/aws_orbit_sdk/: CommonPodSpecification.py  __init__.py  common.py  common_pod_specification.py  controller.py  database.py  emr.py  glue_catalog.py  json.py  transformations.py
sdk/aws_orbit_sdk/magics/: database.py  orbit.py
sdk/datamaker_sdk/: __init__.py  common.py  controller.py  database.py  emr.py  glue_catalog.py  json.py  transformations.py
sdk/datamaker_sdk/database/: magics.py
sdk/datamaker_sdk/glue/: __init__.py  catalog.py  endpoint.py  forward.py
sdk/datamaker_sdk/json/: __init__.py
sdk/datamaker_sdk/magics/: database.py  datamaker.py
sdk/datamaker_sdk/transformations/: transformations.py
(+1143 files in other folders)
