[metadata]
license_files =
  ../LICENSE
  ../NOTICE
  VERSION

[flake8]
max-line-length = 120
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist
    .venv
    .env
    .orbit.out

[mypy]
python_version = 3.6
strict = False
ignore_missing_imports = True
